--- a/Products.html
+++ b/Products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>飞天马信息科技有限公司</title>
+	<title>产品方案——飞天马信息科技有限公司</title>
 	<link rel="shortcut icon" type="image/x-icon" href="css/images/favicon.ico" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 	<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="all" />
@@ -28,16 +28,17 @@
 					<h1 id="logo"><a href="#">Proper</a></h1>
 					<nav id="navigation">
 						<ul>
-							<li class="active"><a href="#">首页</a></li>
-							<li><a href="products.html">产品方案</a></li>
+							<li><a href="index.html">首页</a></li>
+							<li class="active"><a href="#">产品方案</a></li>
 							<li><a href="services.html">技术服务</a></li>
 							<li><a href="showcases.html">典型案例</a></li>
 							<li><a href="ContactUs.html">联系我们</a></li>
 							<li>
 								<a href="#">更多...<span></span></a>
 								<ul>
-									<li><a href="http://pan.baidu.com/s/1bn5wozX" target="_blank">下载</a></li>
-									<li><a href="http://blog.csdn.net/fjddao" target="_blank">博客</a></li>
+									<li><a href="#">服务</a></li>
+									<li><a href="#">案例</a></li>
+									<li><a href="#">博客</a></li>
 								</ul>
 							</li>
 						</ul>
