修改页面链接大小写

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<section class="box">
 						<span class="shadow-t"></span>
 						<h3>典型案例</h3>
-						<a href="#" class="alignright"> + 查看更多案例</a>
+						<a href="ShowCases.html" class="alignright"> + 查看更多案例</a>
 						<div class="cl">&nbsp;</div>
 						<!-- entries -->
 						<div name="" class="entries">
