--- a/Products.html
+++ b/Products.html
@@ -30,8 +30,8 @@
 						<ul>
 							<li><a href="index.html">首页</a></li>
 							<li class="active"><a href="#">产品方案</a></li>
-							<li><a href="services.html">技术服务</a></li>
-							<li><a href="showcases.html">典型案例</a></li>
+							<li><a href="Services.html">技术服务</a></li>
+							<li><a href="ShowCases.html">典型案例</a></li>
 							<li><a href="ContactUs.html">联系我们</a></li>
 							<li>
 								<a href="#">更多...<span></span></a>
