--- a/ShowCases.html
+++ b/ShowCases.html
@@ -29,8 +29,8 @@
 					<nav id="navigation">
 						<ul>
 							<li><a href="index.html">首页</a></li>
-							<li><a href="products.html">产品方案</a></li>
-							<li><a href="services.html">技术服务</a></li>
+							<li><a href="Products.html">产品方案</a></li>
+							<li><a href="Services.html">技术服务</a></li>
 							<li class="active"><a href="#">典型案例</a></li>
 							<li><a href="ContactUs.html">联系我们</a></li>
 							<li>
