--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<h2>Lorem Ipsum Dolor <br />1-Amet Consectetur</h2>
 									<p>Sed vel lacus lorem, non auctor ante. Aliquam posuere libero non felis euismod ac volutpat augue ullamcorper. Suspendisse convallis mi eget leo laoreet eu tincidunt metus sollicitudin. Proin vulputate pharetra porttitor. Quisque eu nisi dolor. Donec ipsum libero, impect lipsum dolor.</p>
 								</div>
-								<a href="#" class="slider-btn"><span>Order Now</span></a>
+								<a href="#" class="slider-btn"><span>资料下载1</span></a>
 							</li>
 							<li>
 								<img src="css/images/slide-img1.jpg" alt="" />
@@ -65,7 +65,7 @@
 									<h2>Lorem Ipsum Dolor <br />2-Amet Consectetur</h2>
 									<p>Sed vel lacus lorem, non auctor ante. Aliquam posuere libero non felis euismod ac volutpat augue ullamcorper. Suspendisse convallis mi eget leo laoreet eu tincidunt metus sollicitudin. Proin vulputate pharetra porttitor. Quisque eu nisi dolor. Donec ipsum libero, impect lipsum dolor.</p>
 								</div>
-								<a href="#" class="slider-btn"><span>Order Now</span></a>
+								<a href="#" class="slider-btn"><span>资料下载2</span></a>
 							</li>
 							<li>
 								<img src="css/images/slide-img1.jpg" alt="" />
@@ -73,7 +73,7 @@
 									<h2>Lorem Ipsum Dolor <br />3-Amet Consectetur</h2>
 									<p>Sed vel lacus lorem, non auctor ante. Aliquam posuere libero non felis euismod ac volutpat augue ullamcorper. Suspendisse convallis mi eget leo laoreet eu tincidunt metus sollicitudin. Proin vulputate pharetra porttitor. Quisque eu nisi dolor. Donec ipsum libero, impect lipsum dolor.</p>
 								</div>
-								<a href="#" class="slider-btn"><span>Order Now</span></a>
+								<a href="#" class="slider-btn"><span>资料下载3</span></a>
 							</li>
 						</ul>
 					</div>
@@ -83,27 +83,42 @@
 					<!-- 产品方案-简要描述 -->
 					<section name="" class="cols">
 						<div class="col">
-							<h3><a href="#">移动应用程序开发</a></h3>
-							<p>Sed vel lacus lorem, non auctor ante. Aliquam posuere libero non felis euismod ac volutpat augue ullamcor-<br />per suspendisse convallis mi eget leo.</p>
-							<a href="#" class="col-btn">View All</a>
+							<h3><a href="#">移动应用程序</a></h3>
+							<p>
+								随着移动互联网时代的到来，我们对中小企开拓移动互联网市场做了大量的市场调查，
+								并提供了可行的移动互联网解决方案，同时我们拥有独立的产品团队，开发及运营独立的移动App产品。
+							</p>
+							<!--<a href="#" class="col-btn">查看</a>-->
 						</div>
 						
 						<div class="col">
-							<h3><a href="#">电子系统集成</a></h3>
-							<p>Aenean quis feugiat nibh. Nunc feugiat sem vel odio dapibus pretium. Proin mollis, ante sit amet egestas tristique, ipsum erat dapibus nulla dolor porta. </p>
-							<a href="#" class="col-btn">View Portfolio</a>
+							<h3><a href="#">地理信息系统</a></h3>
+							<p>
+								地理信息系统(GIS)的行业应用领域已经渗入国土、水利等各行各业，
+								我们可以提供全套的地理信息系统方案，包括DEM数据和卫星影像数据等，或为第三方系统提供的地理信息数据支持。
+							</p>
+							<!--<a href="#" class="col-btn">查看</a>-->
 						</div>
 
 						<div class="col">
-							<h3><a href="#">地理信息系统开发</a></h3>
-							<p>Nulla id tellus in neque hendrerit commodo. In interdum dignissim molestie. Donec pulvinar neque vel sem bibendum phare integer dorem.</p>
-							<a href="#" class="col-btn">Read More</a>
+							<h3><a href="#">行业软件系统</a></h3>
+							<p>
+								基于多年的软件开发和集成经验，我们能够为企业提供专业的软件开发服务，
+								如在企业内网部署办公自动化软件、数据库管理系统等，也可以根据企业的具体要求，开发相应的行业应用软件。
+							</p>
+							<!--<a href="#" class="col-btn">查看</a>-->
 						</div>
 
 						<div class="col">
-							<h3><a href="#">系统集成服务</a></h3>
-							<p>Cras adipiscing tincidunt nulla ac er ultrices. Vestibulum in erat in erat can sodales. Proin fringilla eros nibh, sed varius turpis el vel adipiscing nibh. </p>
-							<a href="#" class="col-btn">Request Proposal</a>
+							<h3><a href="#">软件定制服务</a></h3>
+							<p>
+								客户需求总是不断变化，不同的客户对信息化产品的需求也不尽相同；
+								我们拥有多年的软件开发和集成经验，能够为客户提供桌面程序和移动APP的定制化开发服务。
+								<!--客户需求总是不断变化，不同的客户对信息化产品的需求也不尽相同，这时就需要产品厂商具备定制化开发的能力，
+								面向用户需求，提供产品定制化方案。飞天马软件具有多年的软件开发和集成经验，拥有产品的完全自主知识产权，
+								能够为我们的客户提供源代码层的支持，为客户提供桌面程序和移动APP的定制化开发服务。-->
+							</p>
+							<!--<a href="#" class="col-btn">查看</a>-->
 						</div>
 						<div class="cl">&nbsp;</div>
 					</section>
@@ -143,27 +158,45 @@
 					<!-- services -->
 					<section class="services">
 						<div class="widget">
-							<h3>技术服务</h3>
+							<h3>服务宗旨</h3>
 							<a name="services" href="#"></a>
-							<p>Sed vel lacus lorem, non auctor ante. Aliquam posuere libero non felis euismod ac volutpat augue ullamcorper. Suspendisse convallis mi eget leo Sed pellentesque aliquam urna, vel euismod libero venenatis vitae.</p>
+							<ul>
+								<li style="list-style-type: disc;">为用户提供响应快、全方位、高品质的原厂服务</li>
+								<li style="list-style-type: disc;">以产品服务为基石，为用户提供全面移动应用开发 与移动管理解决方案支持</li>
+								<li style="list-style-type: disc;">以客户为中心、以应用为先导、以服务促发展</li>
+							</ul>
+							<!--<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+								飞天马软件工作室于2004年开始筹建，经过前后两年的摸索，于2006年底逐步建立了稳定的合作开发团队。
+								目前拥有技术过硬、经验丰富的IT人才，从事软件设计开发有10多年经验，在软件项目的需求沟通、方案设计、
+								产品研发、软件设计、代码编程、后续维护、项目管理方面都有丰富的经验，能够为广大用户提供满意的软件
+								开发服务和成熟稳定的高质量软件产品。</p>-->
 						</div>
 						<div name="" class="widget contact-widget">
 							<h3>联系我们</h3>
 							<ul>
-								<li>East Pixel Bld. 99, Creative City 9000</li>
-								<li><strong>Phone: </strong>655-606-605</li>
-								<li><strong>Email:</strong>template@proper.com</li>
+								<li>福建省福州市鼓楼区屏西路200号</li>
+								<li><strong>Phone: </strong>0591-</li>
+								<li><strong>Email: </strong>Sales@fhsoft.cn</li>
+								<li><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong>Service@fhsoft.cn</li>
+								<li><strong>QQ: &nbsp;&nbsp;&nbsp;&nbsp;</strong>81-060-3399</li>
 							</ul>
 						</div>
 						<div name="Social" class="widget socials-widget">
 							<h3>会员服务</h3>
-							<p>Lorem ipsum dolor sit amet eu.</p>
-							<a href="#" class="facebook-ico">facebook</a>
-							<a href="#" class="twitter-ico">twitter</a>
-							<a href="#" class="rss-ico">rss</a>
-							<a href="#" class="in-ico">in</a>
-							<a href="#" class="skype-ico">skype</a>
-							<a href="#" class="google-ico">google</a>
+								<p><a href="#" class="facebook-ico">facebook</a>加入VIP QQ群.</p>
+								<p><a href="#" class="in-ico">facebook</a>人工电话服务.</p>
+								<p><a href="#" class="rss-ico">facebook</a>上门技术服务.</p>
+								<p>
+									<!--
+									<a href="#" class="facebook-ico">facebook</a>
+									<a href="#" class="twitter-ico">twitter</a>
+									<a href="#" class="rss-ico">rss</a>
+									<a href="#" class="in-ico">in</a>
+									<a href="#" class="skype-ico">skype</a>
+									<a href="#" class="google-ico">google</a>
+									-->
+								</p>
+							
 						</div>
 						<div class="cl">&nbsp;</div>
 					</section>
