--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 	<![endif]-->
 	<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+  			var hm = document.createElement("script");
+			hm.src = "//hm.baidu.com/hm.js?998ea0838ff0c4991e576f93ca0e9c91";
+  			var s = document.getElementsByTagName("script")[0]; 
+  			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 </head>
 <body>
 	<!-- wrapper -->
