--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<![endif]-->
 	<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
-	<script>
+	<meta baidu-gxt-verify-token="2d1ab3a073153b01f59c14ccd44a4520">
+	script>
 		var _hmt = _hmt || [];
 		(function() {
   			var hm = document.createElement("script");
