--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
 	<meta baidu-gxt-verify-token="2d1ab3a073153b01f59c14ccd44a4520">
-	script>
+	<script>
 		var _hmt = _hmt || [];
 		(function() {
   			var hm = document.createElement("script");
