--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <link rel="stylesheet" type="text/css" href="css/magnific-popup.css" />
     <!-- END MAGNIFIC POPUP STYLESHEET -->
     <!-- LOAD GOOGLE FONT OPEN SANS -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,300,400,600,700" rel="stylesheet" type="text/css" />
+    <!--link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,300,400,600,700" rel="stylesheet" type="text/css" /-->
     <!-- END GOOGLE FONT OPEN SANS -->
     <!-- START AJAX WEBFONTS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+    <!--script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script-->
     <!-- END AJAX WEBFONTS -->
     <!-- START MOBILE DETECT -->
     <script>
