删除百度地图

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
           QQ群:&nbsp;51-239-51&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </h5>
         <!--百度地图容器-->
-        <iframe src="map.html" width="800" height="500" frameborder="0" scrolling="no"></iframe>
+        <!--iframe src="map.html" width="800" height="500" frameborder="0" scrolling="no"></iframe-->
       </div>
     </div>
   </div>
